Adding CaseD gpu notebook

--- a/Ws_multi_thread.ipynb
+++ b/Ws_multi_thread.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "id": "11bc7f53-81e2-419a-9d0b-7a02391346e1",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "id": "253c3aef-6a5c-4364-a6d9-dbade995f1c8",
    "metadata": {},
    "outputs": [
@@ -37,7 +37,7 @@
        "qts_will (generic function with 2 methods)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 3,
    "id": "4cbe2292-54dc-4b82-a013-28d19a60cc81",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
        "QTS_will (generic function with 1 method)"
       ]
      },
-     "execution_count": 202,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "id": "188e91ca-121d-41a7-b40e-d7c3de8a15e9",
    "metadata": {},
    "outputs": [
@@ -197,7 +197,7 @@
        "1.0000000000002276"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "id": "8a072465-b613-4f1b-8000-ed5f8abe5339",
    "metadata": {},
    "outputs": [
@@ -404,7 +404,7 @@
        "5.0e-5"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "id": "f1594ca0-b3a4-4f7a-b461-8c1b99f0b9dd",
    "metadata": {},
    "outputs": [
@@ -441,7 +441,7 @@
        "0.18392662750161842"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "id": "b5307d7e-6402-4ea0-845b-63dd272790a2",
    "metadata": {},
    "outputs": [
@@ -472,7 +472,7 @@
        "Es_case_D (generic function with 1 method)"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -598,7 +598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 27,
    "id": "f2634d71-a726-460f-bd49-af9c2c457ed0",
    "metadata": {},
    "outputs": [
@@ -608,7 +608,7 @@
        "QTS3 (generic function with 1 method)"
       ]
      },
-     "execution_count": 235,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -634,9 +634,9 @@
     "    zid = rho*(phi_m + lamb - beta*sqrt(lamb^2 + chi^2 + 4*(1 + chi)*sin(phi_m/2)^2 + 2*lamb*sin(phi_m)));\n",
     "    zod = rho*(lamb - beta*sqrt(lamb^2 + chi^2));\n",
     "    \n",
-    "    #println(\"xp: \", xp)\n",
-    "    #println(\"zid: \", zid)\n",
-    "    #println(\"zod: \", zod)\n",
+    "    println(\"xp: \", xp)\n",
+    "    println(\"zid: \", zid)\n",
+    "    println(\"zod: \", zod)\n",
     "    \n",
     "#####################################\n",
     "    # find critical alpha\n",
@@ -646,8 +646,8 @@
     "    kap(alp::Float64) = sqrt(lamb^2 + chi^2 + 4*(1+chi)*sin(alp)^2 + 2*lamb*sin(2*alp))\n",
     "    N2(alp::Float64) = lamb*cos(2*alp) + (1+chi)*sin(2*alp) - beta * kap(alp)\n",
     "\n",
-    "    #println(\"N1(1e-4): \", N1(1e-4))\n",
-    "    #println(\"N2(1e-4): \", N2(1e-4))\n",
+    "    println(\"N1(1e-4): \", N1(1e-4))\n",
+    "    println(\"N2(1e-4): \", N2(1e-4))\n",
     "    \n",
     "    alp_crit1_found = true\n",
     "    alp_crit2_found = true\n",
@@ -670,6 +670,8 @@
     "    alp_crit1_usable = false\n",
     "    alp_crit2_usable = false\n",
     "\n",
+    "    \n",
+    "    \n",
     "    if alp_crit1_found == true\n",
     "        z_crit1 = z_ob - 2*rho*(alp_crit1 + (lamb - beta*kap(alp_crit1))/2)  \n",
     "        if (z_crit1 > z_ob - zid) && (z_crit1 < z_ob - zod)\n",
@@ -685,7 +687,7 @@
     "    end        \n",
     "\n",
     "    if (alp_crit1_usable == true) && (alp_crit2_usable == true)\n",
-    "        #println(\"Both crit points usable\")\n",
+    "        println(\"Both crit points usable\")\n",
     "\n",
     "        # Use BP from both N1 and N2\n",
     "        #zp1, zp2 = sort([z_crit1, z_crit2])\n",
@@ -701,7 +703,7 @@
     "\n",
     "    elseif (alp_crit1_usable == false) && (alp_crit2_usable == false)\n",
     "\n",
-    "        #println(\"Neither crit points usable... using zero instead\")\n",
+    "        println(\"Neither crit points usable...\")\n",
     "\n",
     "        # Use zero as BP. This might introducing undesired spikes \n",
     "        #i1 = QTS_will(iii, z_ob - zid, 0.0)\n",
@@ -713,10 +715,10 @@
     "        #return quadgk(z -> iii(z), z_ob - zid, z_ob - zod, rtol=1e-4)[1]\n",
     "\n",
     "    elseif alp_crit1_usable == true\n",
-    "        #println(\" only N1 BP usable \")\n",
+    "        println(\" only N1 BP usable \")\n",
     "        zp1 = z_crit1\n",
     "    else\n",
-    "        #println(\" only N2 BP usable \")\n",
+    "        println(\" only N2 BP usable \")\n",
     "        zp1 = z_crit2\n",
     "    end\n",
     "\n",
@@ -731,17 +733,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 28,
    "id": "61c217fd-d972-4ea8-9933-fe0a1fc8d413",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xp: 1.0e-6\n",
+      "zid: 0.00244763121917424\n",
+      "zod: 1.500000033037574e-10\n",
+      "N1(1e-4): 6.466666667703791e-7\n",
+      "N2(1e-4): -1.597831667324301e-10\n",
+      "Both crit points usable\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "1.8515182009620213e10"
       ]
      },
-     "execution_count": 236,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -921,23 +935,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 19,
    "id": "9b6d13d3-1b69-4687-9001-4362c865c942",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Both crit points usable\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
        "1.8515182009620213e10"
       ]
      },
-     "execution_count": 238,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "QTS3(0.0, 0.0, gamma, lamb, 1e-6)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "b36bb764-3ec4-4559-bfb6-a48db4fbdf3e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "xp: 1.0e-6\n",
+      "zid: 0.0024313546223801996\n",
+      "zod: -4.898379833352846e-7\n",
+      "N1(1e-4): -6.601999999977792e-5\n",
+      "N2(1e-4): -3.041653877317377e-7\n",
+      " only N2 BP usable \n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1.0493335500233994e9"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "QTS3(1e-4, 1e-4, gamma, lamb, 1e-6)"
    ]
   },
   {
@@ -1077,7 +1131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 11,
    "id": "7eac4db2-7ab6-4525-a1ca-59291bf2691e",
    "metadata": {},
    "outputs": [
@@ -1087,7 +1141,7 @@
        "compute_Ws (generic function with 1 method)"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1119,6 +1173,27 @@
     "    #return qvec\n",
     "    return sum* dxp*beta^2/rho^2\n",
     "end"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "9431025d-42f6-4494-812c-60f3d42e408b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-144331.19794153157"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "compute_Ws(0.0, 0.0, gamma, lamb, 101)"
    ]
   },
   {
