Arrage core files

--- a/super.ipynb
+++ b/super.ipynb
@@ -39,6 +39,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "8208314b-0876-40e7-ae0e-dd92985baacc",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "compute_Wx_case_A (generic function with 1 method)"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "include(\"core/integrator.jl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "id": "6163f66f-cfc7-4319-90e1-8aa326ea032a",
    "metadata": {},
@@ -4416,24 +4437,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "65a7716f-c4fe-4319-80b0-24eed48a0963",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "track_a_drift (generic function with 2 methods)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "LoadError",
+     "evalue": "LoadError: UndefVarError: CuDeviceArray not defined\nin expression starting at /global/cfs/cdirs/m669/wlou1991/Julia/core/kick.jl:4",
+     "output_type": "error",
+     "traceback": [
+      "LoadError: UndefVarError: CuDeviceArray not defined\nin expression starting at /global/cfs/cdirs/m669/wlou1991/Julia/core/kick.jl:4",
+      "",
+      "Stacktrace:",
+      " [1] top-level scope",
+      "   @ /global/cfs/cdirs/m669/wlou1991/Julia/core/kick.jl:4",
+      " [2] include(fname::String)",
+      "   @ Base.MainInclude ./client.jl:451",
+      " [3] top-level scope",
+      "   @ In[4]:1",
+      " [4] eval",
+      "   @ ./boot.jl:373 [inlined]",
+      " [5] include_string(mapexpr::typeof(REPL.softscope), mod::Module, code::String, filename::String)",
+      "   @ Base ./loading.jl:1196"
+     ]
     }
    ],
    "source": [
-    "include(\"kick.jl\")\n",
-    "include(\"simple_track.jl\")"
+    "include(\"core/kick.jl\")\n",
+    "include(\"core/simple_track.jl\")"
    ]
   },
   {
