adding files for ML data generation

--- a/track_FACET.ipynb
+++ b/track_FACET.ipynb
@@ -2955,52 +2955,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 1,
    "id": "65a7716f-c4fe-4319-80b0-24eed48a0963",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "track_a_drift (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "include(\"core/simple_track.jl\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "c8d83561-3197-493e-b546-d59f77e2026f",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "emit (generic function with 1 method)"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "function emit(bb)\n",
-    "    return sqrt(cov(bb[1,:], bb[1,:])*cov(bb[2,:], bb[2,:]) - cov(bb[1,:], bb[2,:])^2)\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "6e488c4c-0d42-40fe-9849-d7a84f793f88",
    "metadata": {},
    "outputs": [
     {
@@ -3009,24 +2965,14 @@
        "emit_dispersion_free (generic function with 1 method)"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "function emit_dispersion_free(bb)\n",
-    "    delta2 = cov(bb[6,:], bb[6,:])\n",
-    "    xd = cov(bb[1,:], bb[6,:])\n",
-    "    pd = cov(bb[2,:], bb[6,:])\n",
-    "    \n",
-    "    eb = cov(bb[1,:], bb[1,:]) - xd^2 / delta2\n",
-    "    eg = cov(bb[2,:], bb[2,:]) - pd^2 / delta2\n",
-    "    ea = -cov(bb[1,:], bb[2,:]) + xd * pd / delta2\n",
-    "    \n",
-    "    emit = sqrt(eb*eg - ea^2)\n",
-    "    return emit \n",
-    "end"
+    "include(\"core/simple_track.jl\")\n",
+    "include(\"core/optics.jl\")"
    ]
   },
   {
